fixed overflow

--- a/style.css
+++ b/style.css
@@ -5,25 +5,25 @@ body {
 }
 
 .container {
+    border: 1px solid black;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
-    padding: 50px;
+    align-items: flex-start;
+    margin: 50px;
+    height: 600px;
+    width: 600px;
 }
 .line {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    flex: 1 1 auto;
+    justify-content: space-evenly;
+    align-items: space-evenly;
+    width: 600px;
 }
 
 .square {
-    flex-basis: auto;
-    border: 1px solid black;
-    border-radius: 4px; 
-    position: relative;
-    box-sizing: border-box;
-    padding: 20px;
+    flex: 1 0 auto;
     background-color: white;
 }
 
